[Rspec] controller/model/helper up to 70%

--- a/public/422.html
+++ b/public/422.html
@@ -62,6 +62,7 @@
       <p>Maybe you tried to change something you didn't have access to.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+    <a href="http://127.0.0.1:3000">Back to home</a>
   </div>
 </body>
 </html>
