--- a/public/500.html
+++ b/public/500.html
@@ -61,6 +61,7 @@
       <h1>We're sorry, but something went wrong.</h1>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+    <a href="http://127.0.0.1:3000">Back to home</a>
   </div>
 </body>
 </html>
