--- a/public/404.html
+++ b/public/404.html
@@ -62,6 +62,7 @@
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+    <a href="http://127.0.0.1:3000">Back to home</a>
   </div>
 </body>
 </html>
