[Update] set mode dark/light for layout #12

--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width , initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Conference room booking management system">
-    <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conference room booking management system</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <!-- Define the character encoding of the document as UTF-8 -->
+  <meta charset="UTF-8" />
+
+  <!-- Ensures compatibility with Internet Explorer's older rendering engine -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Makes the webpage responsive by setting the viewport width to match the device's width -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Provides a description of the application for SEO and accessibility purposes -->
+  <meta name="description" content="Conference room booking management system">
+
+  <!-- Keywords to help with SEO; these keywords describe the application -->
+  <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
+
+  <!-- Link to the web app manifest file, useful for Progressive Web Apps (PWAs) -->
+  <link rel="manifest" href="/manifest.json">
+
+  <!-- Shortcut icon for the browser tab (favicon) -->
+  <link rel="shortcut icon" href="/favicon.ico">
+
+  <!-- Another viewport setting to ensure proper scaling on mobile devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title of the webpage, displayed in the browser tab -->
+  <title>Conference room booking management system</title>
+</head>
+
+<body>
+  <!-- The root element where the React application will be rendered -->
+  <div id="root"></div>
+
+  <!-- Include the main JavaScript file for the React app -->
+  <!-- The type="module" attribute enables ES6 module functionality -->
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
