Fix the admin dashboard preview (#14)

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
 
   <!-- Include the main JavaScript file for the React app -->
   <!-- The type="module" attribute enables ES6 module functionality -->
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
